--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,10 +20,8 @@
       .height
         height:
         %span.example height=100
-
-      %h3 Optional Parameter:
-      .conv_type
-        conv_type:
-        %span.example conv_type=resize
+      .crop_type
+        crop_type:
+        %span.example crop_type=fit
         Or
-        %span.example conv_type=crop
+        %span.example crop_type=fill
